--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -19,10 +19,10 @@ doctrine:
         auto_mapping: true
         mappings:
             App:
-                type: attribute
+                type: xml
                 is_bundle: false
-                dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'App\Entity'
+                dir: '%kernel.project_dir%/src/Infrastructure/ForProduction/Entity'
+                prefix: 'App\Domain\Entity'
                 alias: App
         controller_resolver:
             auto_mapping: false
