--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,3 +25,6 @@ services:
     App\Application\Ports\Repositories\IHouseRepository: '@App\Infrastructure\ForProduction\Repository\SqlHouseRepository'
     App\Application\Ports\Repositories\IReservationRepository: '@App\Infrastructure\ForProduction\Repository\SqlReservationRepository'
     App\Application\Ports\Repositories\IUserRepository: '@App\Infrastructure\ForProduction\Repository\SqlUserRepository'
+
+    App\Application\Listeners\ExceptionListener:
+        tags: [ kernel.event_listener ]
