--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,22 +6,23 @@
 parameters:
 
 services:
-    # default configuration for services in *this* file
-    _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+  # default configuration for services in *this* file
+  _defaults:
+    autowire: true      # Automatically injects dependencies in your services.
+    autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
-    App\:
-        resource: '../src/'
-        exclude:
-            - '../src/Kernel.php'
-            - '../src/Infrastructure/ForTests/Services/**/*'
+  # makes classes in src/ available to be used as services
+  # this creates a service per class whose id is the fully-qualified class name
+  App\:
+    resource: '../src/'
+    exclude:
+      - '../src/Kernel.php'
+      - '../src/Infrastructure/ForTests/Services/**/*'
 
-    App\Application\Ports\Repositories\IHouseRepository: '@App\Infrastructure\ForProduction\Repository\SqlHouseRepository'
-    App\Application\Ports\Repositories\IReservationRepository: '@App\Infrastructure\ForProduction\Repository\SqlReservationRepository'
-    App\Application\Ports\Repositories\IUserRepository: '@App\Infrastructure\ForProduction\Repository\SqlUserRepository'
+  App\Application\Ports\Repositories\IHouseRepository: '@App\Infrastructure\ForProduction\Repository\SqlHouseRepository'
+  App\Application\Ports\Repositories\IReservationRepository: '@App\Infrastructure\ForProduction\Repository\SqlReservationRepository'
+  App\Application\Ports\Repositories\IUserRepository: '@App\Infrastructure\ForProduction\Repository\SqlUserRepository'
+  App\Application\Ports\Repositories\IHouseCalendarRepository: '@App\Infrastructure\ForProduction\Repository\SqlHouseCalendarRepository'
 
-    App\Application\Listeners\ExceptionListener:
-        tags: [ kernel.event_listener ]
+  App\Application\Listeners\ExceptionListener:
+    tags: [ kernel.event_listener ]
