--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -11,7 +11,7 @@ security:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
       security: false
     login:
-      pattern: ^/api/auth/login
+      pattern: ^/api/login
       json_login:
         check_path: api_login_check
         success_handler: lexik_jwt_authentication.handler.authentication_success
@@ -24,6 +24,7 @@ security:
 
   access_control:
     - { path: ^/api/auth/login, roles: PUBLIC_ACCESS }
+    - { path: ^/api/login_check, roles: PUBLIC_ACCESS }
     - { path: ^/api/create-account, roles: PUBLIC_ACCESS }
     - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
 
