--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,8 @@
 controllers:
-    resource:
-        path: ../src/Application/Controller/
-        namespace: App\Application\Controller
-    type: attribute
+  resource:
+    path: ../src/Application/Controller/
+    namespace: App\Application\Controller
+  type: attribute
+
+api_login_check:
+  path: /api/login_check
